--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="" href="" />
+    <link rel="icon" type="" href="https://png.pngtree.com/png-clipart/20220719/original/pngtree-sun-icon-logo-png-png-image_8366229.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>SkySUN</title>
   </head>
   <body>
     <div id="root"></div>
